# demucs-infer

./: .gitignore  CHANGELOG.md  CLAUDE.md  GITHUB_CONFIG.md  PUBLISHING_GUIDE.md  README.md  TRUSTED_PUBLISHING_SETUP.md  pyproject.toml
.github/: release-notes-v4.1.0.md  release-notes-v4.1.1.md
.github/workflows/: publish.yml  python-package.yml
demucs_infer/: __about__.py  __init__.py  api.py  apply.py  audio.py  checkpoint_catalog.py  checkpoint_runtime.py  clean_api.py  community.py  compat.py  demucs.py  hdemucs.py  htdemucs.py  model_info.py  pretrained.py  repo.py  separate.py  spec.py  states.py  transformer.py  utils.py  wdemucs.py  wiener.py
demucs_infer/config/: checkpoints.toml
docs/: MIGRATION.md  checkpoints_provenance.json
docs/blueprints/plans/: 2026-03-25-gdrive-community-models.md  2026-07-22-multi-format-checkpoint-support.md
docs/dev/: IMPLEMENTATION_NOTES.md  IMPROVEMENTS_2025.md  MAINTENANCE.md  PRINCIPLES.md  README.md
docs/superpowers/plans/: 2026-03-25-gdrive-community-models.md
examples/: README.md  basic_separation.py
notebooks/: quickstart_colab.ipynb
scripts/: bump_version.sh
tests/: test_api.py  test_api_device.py  test_audio_fallback.py  test_baseline_regression.py  test_checkpoint_config.py  test_checkpoints_liveness.py  test_clean_api.py  test_community.py  test_import.py  test_imports.py  test_log.py  test_models.py  test_phase0_contract.py  test_phase3_checkpoints.py  test_pretrained_community.py  test_session_contract.py  test_wiener_vendored.py
tests/fixtures/: baseline_htdemucs.json  checkpoint_probe_baseline.json  public_contract.json  wiener_reference.json
tools/: build_checkpoints_provenance.py  capture_baseline.py  capture_checkpoint_probes.py  capture_public_contract.py  capture_wiener_fixture.py  phase0_probe_common.py
