[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "demucs-infer"
dynamic = ["version"]
description = "Music source separation in the waveform domain - Inference-only (PyTorch 2.x)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
# Note: license-files automatically includes LICENSE by default
authors = [
    {name = "Alexandre Défossez", email = "defossez@fb.com"},
]
maintainers = [
    {name = "worzpro Development Team"},
]
keywords = ["audio", "music", "source-separation", "demucs", "inference"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Minimal inference-only dependencies
# soundfile is the wav/flac load+save fallback for when torchaudio's own
# decoders are unavailable (torchaudio>=2.11 dropped its bundled FFmpeg/sox
# backends in favor of the separate `torchcodec` package -- see the
# `torchcodec` extra below and README's "torchaudio 2.11+" note). Unlike
# torchcodec, soundfile ships self-contained wheels (bundled libsndfile, no
# system FFmpeg needed), so it is safe as a hard floor rather than an extra.
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "soundfile>=0.12.1",
    "einops",
    "julius>=0.2.3",
    "numpy",
    "pyyaml",
    "tqdm",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
# Optional: restore torchaudio's own decoders on torchaudio>=2.11 (which
# requires torchcodec for torchaudio.load/save; needs system FFmpeg libs,
# so it is opt-in rather than a hard dependency). Not required for normal
# use -- the soundfile fallback above already covers wav/flac on 2.11+.
torchcodec = [
    "torchcodec",
]
# Optional: MP3 encoding support
mp3 = [
    "lameenc>=1.2",
]
# Optional: Quantized model support
quantized = [
    "diffq>=0.2.1",
]
# Optional: Community model downloads (Google Drive)
community = [
    "gdown>=5.0.0",
]
# Development dependencies
dev = [
    "black",
    "ruff",
]

[project.scripts]
demucs-infer = "demucs_infer.separate:main"

[project.urls]
Homepage = "https://github.com/openmirlab/demucs-infer"
Repository = "https://github.com/openmirlab/demucs-infer"
"Original Demucs" = "https://github.com/facebookresearch/demucs"
"Bug Reports" = "https://github.com/openmirlab/demucs-infer/issues"
Changelog = "https://github.com/openmirlab/demucs-infer/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "demucs_infer/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["demucs_infer"]

[tool.hatch.build.targets.sdist]
packages = ["demucs_infer"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
markers = [
    "network: hits real network endpoints (checkpoint URL liveness); deselected by default, run with `pytest -m network`",
]
addopts = "-m \"not network\""

[tool.hatch.build]
include = [
    "demucs_infer/**/*.py",
    "demucs_infer/**/*.yaml",  # Include YAML config files (remote/*.yaml)
    "demucs_infer/**/*.yml",   # Include YAML config files
    "demucs_infer/**/*.txt",   # Include files.txt in remote/
    "demucs_infer/**/*.toml",  # Include package-owned checkpoint metadata
]
